# sbot

./: .flake8  .gitignore  .isort.cfg  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  shell.nix
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: check.yml  test.yml  test_build.yml
arduino_fw/: arduino_fw.ino
docs/: Makefile  requirements.txt
docs/source/: cheat_sheet.md  conf.py  index.rst  rules.rst  simulator.rst
docs/source/_static/: style.css
docs/source/api/: advanced.rst  arduino.rst  cheat-sheet.md  game-state.rst  index.rst  motor-board.rst  power-board.rst  servo-board.rst
docs/source/api/vision/: index.rst  orientation.rst  position.rst
docs/source/cheat-sheet/: index.md
docs/source/kit/: arduino.rst  battery.rst  index.md  index.rst  motor-board.rst  pi.rst  power-board.rst  servo-board.rst
docs/source/module/: boards.rst  index.rst  robot.rst
docs/source/ref/: modules.rst  sbot.rst
docs/source/rules/: index.rst
docs/source/tutorials/: connecting-your-kit.rst  electronics-lab.rst  electronics-labs.rst  index.rst  python-whirlwind-tour.rst  setting-up-pycharm.rst  setting-up-vscode.rst  using-your-kit.rst
sbot/: __init__.py  _comp.py  _motors.py  _power.py  _utils.py  _vision.py  arduino.py  arduinos.py  background_motor_board.py  camera.py  comp.py  env.py  exceptions.py  game_specific.py  leds.py  logging.py  marker.py  metadata.py  motor_board.py  mqtt.py  power_board.py  py.typed  robot.py  serial_wrapper.py  servo_board.py  servos.py  timeout.py  utils.py  vision.py
sbot/future/: board_manager.py  overrides.py  pyproject.toml
sbot/future/classless/: __init__.py  arduinos.py  comp.py  leds.py  motors.py  power.py  robot.py  servos.py  utils.py  vision.py
sbot/future/classless/internal/: start_led.py
sbot/historic/: __init__.py  arduino.py  camera.py  leds.py  metadata.py  motor_board.py  power_board.py  robot.py  servo_board.py  utils.py
sbot/internal/: board_manager.py  exceptions.py  logging.py  mqtt.py  overrides.py  serial_wrapper.py  start_led.py  timeout.py  utils.py
sbot/simulator/: camera.py  led_server.py  time_server.py
sbot/vision/: __init__.py  backend.py  game.py
sbot/vision/calibrations/: Logitech C270.xml  __init__.py
sr/robot3/simulator/: camera.py
stubs/RPi/: GPIO.pyi
test_scripts/: motor_test.py  power_test.py  servo_test.py
tests/: __init__.py  conftest.py  pyproject.toml  test_arduino.py  test_metadata.py  test_motor_board.py  test_power_board.py  test_sbot.py  test_serial_wrapper.py  test_servo_board.py  test_timeout.py
tests/test_data/bad/: metadata.json
tests/test_data/missing_key/: metadata.json
tests/test_data/not_object/: metadata.json
tests/test_data/timeout_scripts/: catch-base-exception.py  catch-exception.py  hot-loop.py  sleep.py  try-finally.py
tests/test_data/timeout_scripts_extra/: early-exit.py  exception.py
tests/test_data/valid/: metadata.json
tools/: verify_git_version.py
