[tool.mypy]
mypy_path = "stubs"

warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

strict_optional = true
implicit_optional = true

disallow_any_unimported = true
disallow_subclassing_any = true
#disallow_any_generics = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true

[tool.isort]
atomic = true
balanced_wrapping = true
known_first_party = "sbot"

# hanging grid grouped indent style wrapping
multi_line_output = 5
include_trailing_comma = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sbot/_version.py"

[tool.setuptools]
packages = ["sbot"]

[project]
name = "sbot"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "pyserial >=3,<4",
    "april_vision >=2,<3",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "mypy",
    "build",
    "types-pyserial",
    "typing-extensions; python_version<'3.10'",
    "pytest",
    "pytest-cov",
]
