[tool.mypy]
mypy_path = "stubs"

warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

strict_optional = true
implicit_optional = true

disallow_any_unimported = true
disallow_subclassing_any = true
#disallow_any_generics = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

check_untyped_defs = true

[tool.isort]
atomic = true
balanced_wrapping = true
known_first_party = "sbot"

# hanging grid grouped indent style wrapping
multi_line_output = 5
include_trailing_comma = true

[tool.pytest.ini_options]
markers = [
    "hardware: mark a test that requires hardware to be connected",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sbot/_version.py"

[tool.setuptools]
packages = ["sbot"]

[project]
name = "sbot"
description = "The robot API for the Smallpeice summer school"
authors = [{name = "SourceBots", email =  "hello@sourcebots.co.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "pyserial >=3,<4",
    "april_vision >=2.0.2,<3",
    "typing-extensions; python_version<'3.10'",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Education",
]

[project.urls]
Repository = "https://github.com/sourcebots/sbot"
Homepage = "https://sourcebots.co.uk"
Documentation = "https://docs.sourcebots.co.uk"

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "mypy",
    "build",
    "types-pyserial",
    "pytest",
    "pytest-cov",
]
vision = ["opencv-python-headless >=4,<5"]
